# xray

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: rust-practices.md  sql-improvements.md
src/: error.rs  extract.rs  follow.rs  lang.rs  lsp.rs  main.rs  model.rs  output.rs  parser.rs  resolve.rs  reverse.rs  trace.rs  util.rs
src/extract/: calls.rs  decorators.rs  hooks.rs  jsx.rs  markdown.rs  mod.rs  python.rs  rust.rs  sql.rs  tests_block.rs  types.rs
src/resolve/: markdown.rs  py.rs  rs.rs  shared.rs  sql.rs  ts.rs
