[package]
name = "xray"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"

[lints.rust]
future-incompatible = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints that add noise without value in this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = true
strip = true
